--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Interphase by TEMPLATED</title>
+		<title>Severless Translator</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -23,15 +23,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body class="landing">
-
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Interphase</a></h1>
+				<h1><a href="index.html">Severless Translation Web App</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="{{url_for('index')}}">Home</a></li>
+						<li><a href="{{url_for('translate')}}">Translate</a></li>
 					</ul>
 				</nav>
 			</header>
