--- a/templates/translate.html
+++ b/templates/translate.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="UTF-8">
-		<title>Interphase by TEMPLATED</title>
+		<title>Severless Translator</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -17,25 +17,37 @@
 		<link rel="stylesheet" href="{{url_for('static', filename = 'css/style-xlarge.css') }}" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-   <body class="landing">
+	
+	
+   <body>
+			<!-- Header -->
+			<header id="header">
+				<h1><a href="index.html">Severless Translation Web App</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="{{url_for('index')}}">Home</a></li>
+						<li><a href="{{url_for('translate')}}">Translate</a></li>
+					</ul>
+				</nav>
+			</header>
       
-      <section id="two" class="wrapper style2">
-				<div class="inner">
-					<div class="box">
-						<div class="content">
-                            <h3>Please enter your text, source language, and target language below:</h3>
-                            <form action = "/translate_text" method = "post">
-                              <p>Enter text:</p>
-                              <p><input type = "text" name = "tx" /></p>
-                              <p>Enter source language:</p>
-                              <p><input type = "text" name = "sl" /></p>
-                              <p>Enter target language:</p>
-                              <p><input type = "text" name = "tl" /></p>
-                              <p><input type = "submit" value = "submit" /></p>
-                           </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
+         <section id="one" class="wrapper style2">
+   				<div class="inner">
+   					<div class="box">
+   						<div class="content">
+                               <h3>Please enter your text, source language, and target language below:</h3>
+                               <form action = "/translate_text" method = "post">
+                                 <p>Enter text:</p>
+                                 <p><input type = "text" name = "tx" /></p>
+                                 <p>Enter Source Language:</p>
+                                 <p><input type = "text" name = "sl" /></p>
+                                 <p>Enter Target Language:</p>
+                                 <p><input type = "text" name = "tl" /></p>
+                                 <p><input type = "submit" value = "submit" /></p>
+                              </form>
+                           </div>
+                       </div>
+                   </div>
+               </section>
    </body>
 </html>
