finishing up front-end

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				<ul class="actions">
 					<li>
-						<a href="{{url_for('translate')}}", class="button big">Translate</a>
+						<a href="{{url_for('translate')}}", class="button big">Translate!</a>
 					</li>
 				</ul>
 			</section>
@@ -68,5 +68,21 @@
 					</div>
 				</div>
 			</section>
+			
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+				
+					<ul class="icons">
+							<li><a href="https://github.com/JiamanBettyWu/ebflask" class="icon fa-github"><span class="label">Github</span></a></li>
+						</ul>
+			
+					<ul class="copyright">
+						
+						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+			</footer>
 	</body>
 </html>
