--- a/templates/translate.html
+++ b/templates/translate.html
@@ -43,11 +43,27 @@
                                  <p><input type = "text" name = "sl" /></p>
                                  <p>Enter Target Language:</p>
                                  <p><input type = "text" name = "tl" /></p>
-                                 <p><input type = "submit" value = "submit" /></p>
+                                 <p><input type = "Submit" value = "submit" /></p>
                               </form>
                            </div>
                        </div>
                    </div>
                </section>
+               
+               <!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+			
+						<ul class="icons">
+								<li><a href="https://github.com/JiamanBettyWu/ebflask" class="icon fa-github"><span class="label">Github</span></a></li>
+							</ul>
+			
+					<ul class="copyright">
+		
+						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+			</footer>
    </body>
 </html>
