--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1057,9 +1057,10 @@
 				color: #ffffff;
 			}
 
-		#footer .icons .rounded {
+		#footer .icons {
 			border-color: #888;
 			font-size: 1.5em;
+			text-align: center;
 		}
 
 			#footer .icons .rounded:active, #footer .icons .rounded:hover {
