--- a/templates/translation_text.html
+++ b/templates/translation_text.html
@@ -30,7 +30,8 @@
 					</ul>
 				</nav>
 			</header>
-      
+        
+        <!--section one-->
          <section id="one" class="wrapper style2">
    				<div class="inner">
    					<div class="box">
@@ -42,5 +43,22 @@
                        </div>
                    </div>
                </section>
+    
+        <!-- Footer -->
+		<footer id="footer">
+				<div class="container">
+			
+				
+					<ul class="icons">
+								<li><a href="https://github.com/JiamanBettyWu/ebflask" class="icon fa-github"><span class="label">Github</span></a></li>
+							</ul>
+			
+					<ul class="copyright">
+						
+						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+		</footer>
    </body>
 </html>
