--- a/templates/translate.html
+++ b/templates/translate.html
@@ -43,7 +43,7 @@
                                  <p><input type = "text" name = "sl" /></p>
                                  <p>Enter Target Language:</p>
                                  <p><input type = "text" name = "tl" /></p>
-                                 <p><input type = "Submit" value = "submit" /></p>
+                                 <p><input type = "submit" value = "submit" /></p>
                               </form>
                            </div>
                        </div>
