Add language table

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>This is Interphase</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<h2>SERVERLESS TRANSLATION WEB APP</h2>
+				<p>FLASK WEB APPLICATION FOR LANGUAGE TRANSLATION</p>
 				<ul class="actions">
 					<li>
 						<a href="{{url_for('translate')}}", class="button big">Translate!</a>
@@ -49,21 +49,20 @@
 			<section id="one" class="wrapper style1 align-center">
 				<div class="container">
 					<header>
-						<h2>Consectetur adipisicing elit</h2>
-						<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
+						<h2>How are we different?</h2>
 					</header>
 					<div class="row 200%">
 						<section class="4u 12u$(small)">
 							<i class="icon big rounded fa-clock-o"></i>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
+							<p>With serverless computing, infrastructure management tasks like capacity provisioning and patching are handled by AWS, we could realize our ideas and adapt to specific needs faster, cheaper and easier.</p>
 						</section>
 						<section class="4u 12u$(small)">
 							<i class="icon big rounded fa-comments"></i>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ullam consequatur repellat debitis maxime molestiae.</p>
+							<p>With AWS CodePipeline, we could automate the build, test and deploy of this translation web app. With just a single update in the git repository, the change would reflect in the interactive web page quickly and reliably.</p>
 						</section>
 						<section class="4u$ 12u$(small)">
 							<i class="icon big rounded fa-user"></i>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque eaque eveniet, nesciunt molestias. Ipsam, voluptate vero.</p>
+							<p>Amazon Translate is a neural machine translation service that delivers fast and high-quality language translation. It supports 71 languages with 4970 translation combinations.</p>
 						</section>
 					</div>
 				</div>
@@ -72,12 +71,10 @@
 			
 			<!-- Two -->
 			<section>
-				<h3>Table</h3>
-					<h4>Default</h4>
+				<h3>List supported languages</h3>
 						<div class="fixed_header">
 								<table>
 									<thead>
-                                             
                                              <tr>
                                                 
                                                 <th>Language</th>
