--- a/static/css/style.css
+++ b/static/css/style.css
@@ -710,12 +710,13 @@
         width: 400px;
         table-layout: fixed;
         border-collapse: collapse;
+        text-align: center;
       }
       .fixed_header tbody {
         display: block;
         width: 100%;
         overflow: auto;
-        height: 100px;
+        height: 300px;
       }
       .fixed_header thead tr {
         display: block;
