--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 	<body class="landing">
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Severless Translation Web App</a></h1>
+				<h1><a href="{{url_for('index')}}">Severless Translation Web App</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="{{url_for('index')}}">Home</a></li>
